se hicieron arreglos en el header y el main

--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,9 @@
   --two-color: #11555f;
   --three-color: #7ffa47;
   --four-color: #081f32;
+  --five-color: #BDBDBD;
+  --six-color: #F2F2F2;
+  --seven-color: #4F4F4F;
   --maxw: 1440px;
 }
 
