--- a/src/modules/character/styles.scss
+++ b/src/modules/character/styles.scss
@@ -164,7 +164,6 @@ header {
       width: 470px;
       height: 33px;
     }
-
   }
 }
 
@@ -184,9 +183,17 @@ main {
   margin: 30px 0px;
   gap: 30px;
 
+  .buttonCharacters {
+    border: none;
+    width: 100%;
+    padding: 0;
+    cursor: pointer;
+  }
+
   .cardsContainer {
     display: flex;
     flex-direction: column;
+    cursor: pointer;
   }
 
   .characterImg {
@@ -230,7 +237,7 @@ main {
     }
   }
 
-  @media screen and (min-width: 845px) {
+  @media screen and (min-width: 700px) {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     max-width: var(--maxw);
@@ -297,6 +304,208 @@ main {
 
   @media screen and (min-width: 845px) {
     gap: 50px;
+  }
+}
+
+.Perfil {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  gap: 5px;
+  top: -375px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+
+  .circleImg {
+    border-radius: 50%;
+    width: 120px;
+    height: auto;
+    border: 5px solid var(--one-color);
+  }
+
+  .perfilName {
+    font-size: 15px;
+    font-weight: 600;
+  }
+
+  .perfilText {
+    font-size: 13px;
+    color: var(--seven-color);
+  }
+
+  @media screen and (min-width: 845px) {
+    top: -350px;
+    gap: 10px;
+    .circleImg {
+      width: 155px;
+    }
+    .perfilName {
+      font-size: 20px;
+    }
+    .perfilText {
+      font-size: 14px;
+    }
+  }
+}
+
+.informacion {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0;
+  padding: 20px 0px 30px 0px;
+  border-bottom: 1px solid var(--five-color);
+  width: 300px;
+
+  .infoContainer {
+    display: flex;
+    gap: 5px;
+  }
+
+  .infoH2 {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+
+  .infoBorder {
+    border: 1px solid var(--five-color);
+    padding: 10px 10px;
+    border-radius: 8px;
+  }
+
+  .infoName {
+    font-size: 11px;
+    color: var(--seven-color);
+    display: flex;
+    align-items: center;
+    gap: 3px;
+  }
+
+  .infoText {
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+  @media screen and (min-width: 845px) {
+    display: block;
+    padding: 20px 0px 30px 0px;
+    width: 650px;
+
+    .infoContainer {
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: row;
+    }
+
+    .infoH2 {
+      font-size: 23px;
+      margin-left: -20px;
+      margin-bottom: 20px;
+    }
+
+    .infoBorder {
+      border: 1px solid var(--five-color);
+      padding: 15px 40px;
+      border-radius: 8px;
+    }
+    .infoText {
+      font-size: 17px;
+      font-weight: 500;
+    }
+  }
+}
+
+.episodios{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 0;
+  padding: 10px 0px 30px 0px;
+  border-bottom: 1px solid var(--five-color);
+  width: 300px;
+
+  .epiContainer {
+    display: flex;
+    gap: 5px;
+  }
+
+  .epiH2 {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+
+  .epiBorder {
+    border: 1px solid var(--five-color);
+    padding: 10px 10px;
+    border-radius: 8px;
+  }
+
+  .epiName {
+    font-size: 11px;
+    color: var(--seven-color);
+    display: flex;
+    align-items: center;
+    gap: 3px;
+  }
+
+  .epiText {
+    font-size: 14px;
+    font-weight: 500;
+  }
+
+  @media screen and (min-width: 845px) {
+    display: block;
+    padding: 20px 0px 30px 0px;
+    width: 650px;
+
+    .epiContainer {
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: row;
+    }
+
+    .epiH2 {
+      font-size: 23px;
+      margin-left: -20px;
+      margin-bottom: 20px;
+    }
+
+    .epiName {
+      padding: 15px 40px;
+      border-radius: 8px;
+    }
+    .epiText {
+      font-size: 17px;
+      font-weight: 500;
+    }
+  }
+}
+
+
+.mdButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--two-color);
+  color: var(--one-color);
+  border: none;
+  border-radius: 60px;
+  width: 180px;
+  height: 42px;
+  font-size: 15px;
+  z-index: 2;
+  margin-top: 80px;
+
+  @media screen and (min-width: 845px) {
+    position: absolute;
+    bottom: 20px;
+    right: 30px;
   }
 }
 
