--- a/src/modules/character/styles.scss
+++ b/src/modules/character/styles.scss
@@ -11,7 +11,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("../../assets/headermobil.jpg");
+  background-image: url("../../assets/header_mobil.jpg");
   background-size: cover;
   width: 100%;
   height: 350px;
